@@ -31,6 +31,19 @@ public class OccurrenceFinder extends JavaParserVisitorAdapter {
                 // now we've got a scope we're starting with, so work from there
                 search.execute(decl.getScope());
                 decl = search.getResult();
+
+                if (decl == null) {
+                    // nothing found
+                    // This seems to be a lack of type resolution here.
+                    // Theoretically we have the previous declaration node and know from there the Type of
+                    // the variable. The current occurrence (occ) should then be found in the declaration of
+                    // this type. The type however may or may not be known to PMD (see aux classpath).
+
+                    // we can't find it, so just give up
+                    // when we decide to do full symbol resolution
+                    // force this to either find a symbol or throw a SymbolNotFoundException
+                    break;
+                }
             }
         }
         return super.visit(node, data);
