@@ -216,5 +216,25 @@ public class RealClass {
     		]]>
     	</code>
     </test-code>
-
+    <test-code>
+        <description>2410201, False+ AvoidReassigningParameters</description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class PmdBug {
+    class Test {
+        public String field;
+        public Test t;
+    }
+    public void foo(String field) {
+        Test t = new Test();
+        t.field = field;
+        t.t.field = field;
+        t.field.toCharArray();
+    }
+    public static void main(String[] args) {
+        new PmdBug().foo("Hello world");
+    }
+}
+        ]]></code>
+    </test-code>
 </test-data>
